fix(navbar): overflow with long labels

--- a/packages/application-shell/src/components/navbar/navbar.mod.css
+++ b/packages/application-shell/src/components/navbar/navbar.mod.css
@@ -43,7 +43,7 @@
 
 .list-item {
   width: var(--item-width);
-  height: var(--item-height);
+  min-height: var(--item-height);
   /* stylelint-disable-next-line csstools/value-no-unknown-custom-properties */
   background: var(--background-color-for-navbar);
   margin: 0;
@@ -59,9 +59,9 @@
   position: relative;
   display: block;
 }
-.item__active .item-link {
+/* .item__active .item-link {
   padding-right: var(--spacing-l);
-}
+} */
 
 .list-item .item-icon-text {
   display: flex;
@@ -145,10 +145,10 @@
 
 /* NO SUBMENU */
 
-.item__no-submenu,
+/* .item__no-submenu,
 .item_menu-collapsed {
   height: var(--item-height) !important;
-}
+} */
 
 .item_menu-collapsed .item-link {
   text-align: center;
@@ -182,7 +182,7 @@
 :global(.body__menu-open) .list-item {
   height: auto;
   min-height: var(--item-height);
-  max-height: 0;
+  /* max-height: 0; */
   transition: max-height 0.15s ease-out;
   overflow: hidden;
 }
@@ -366,6 +366,7 @@
 
 .list-item.item__active .sublist {
   width: var(--width-left-navigation-sublist);
+  min-height: 100%;
 }
 
 :global(.body__menu-open) .list-item.item__active .sublist {
